fix css z-index

--- a/public_html/vue/order/order-edit.css
+++ b/public_html/vue/order/order-edit.css
@@ -59,6 +59,6 @@
 .loading-overlay {
     z-index: 10000;
 }
-.dropdown-form {
+#order-extras-dropdown {
     z-index: 9999;
 }
